--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,37 @@
 @tailwind components;
 @tailwind utilities;
 
-*,
-body {
+@font-face {
+  font-family: "Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2")
+    format("woff2");
+  font-family: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Medium";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2")
+    format("woff2");
+  font-family: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SemiBold";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-SemiBold.woff2")
+    format("woff2");
+  font-family: 600;
+  font-style: normal;
+}
+
+* {
   padding: 0;
   margin: 0;
+}
+
+body,
+html {
+  width: 100%;
+  height: 100%;
 }
